# Redundant-PiHole-Servers

./: .redundant-server-installed  README.md  install.py  keepalived-backup.conf  keepalived-main.conf  main.py  pyproject.toml
RedundantPiholeServers.egg-info/: PKG-INFO  SOURCES.txt
configurations/: README.md  custom.conf  keepalived-main.conf
