[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "RedundantPiholeServers"
version = "0.1"
authors = [
  { name="HippoProgrammer", email="bcgcustomerservices@gmail.com" },
]
description = "A semi-automatic installer for dual Pihole servers in a redundant config"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HippoProgrammer/Redundant-PiHole-Servers"
